Fixing stlying to have it look better on mobile

--- a/frontend/recipeapp/src/Components/EditableText/EditableText.module.css
+++ b/frontend/recipeapp/src/Components/EditableText/EditableText.module.css
@@ -14,3 +14,15 @@
 .textedit{
     min-width: 40rem;
 }
+@media (max-width:510px) {
+    .editRow{
+        display:flex;
+        flex-direction: row;
+    }
+    .editButton{
+        width:20%;
+        border:1px solid red;
+    }
+
+
+      }
